[AAE-10512] Several icons cut off due to a fix introduced in Angular 14

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -12,3 +12,7 @@ html {
 body {
   margin: 0;
 }
+
+.mat-icon {
+  overflow: unset !important;
+}
